src/test/ui/typeck/issue-57673-ice-on-deref-of-boxed-trait.stderr
error[E0308]: mismatched types
  --> $DIR/issue-57673-ice-on-deref-of-boxed-trait.rs:5:5
   |
LL | fn ice(x: Box<dyn Iterator<Item=()>>) {
   |                                       - help: try adding a return type: `-> (dyn Iterator<Item = ()> + 'static)`
LL |     *x
   |     ^^ expected `()`, found trait object `dyn Iterator`
   |
   = note: expected unit type `()`
           found trait object `(dyn Iterator<Item = ()> + 'static)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
